--- a/music/templates/telugu.html
+++ b/music/templates/telugu.html
@@ -3,5 +3,9 @@
 {% block content%}
 {% if user.is_authenticated %}
 <h1 class="text-center">Choose the song</h1>
+{% for album in ablum_id %}
+
+
+
 {% endif%}
 {%endblock%}
