--- a/music/templates/english.html
+++ b/music/templates/english.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content%}
-{{album_list}}
   <ul>
 {% for album in album_list %}
-        <li><a href="/music/{{ album.id }}/">{{ album.title }}</a></li>
+        <li><a href="/music/english/{{ album.id }}/">{{ album.title }}</a></li>
 {% endfor %}
+<!-- <h1>{{ album_list.title }}</h1> -->
   </ul>
 {% endblock %}
