--- a/music/templates/home.html
+++ b/music/templates/home.html
@@ -1,15 +1,56 @@
-{% extends 'base.html' %}
+
 {% load bootstrap4 %}
-{% block title %}home{% endblock %}
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 {% block content %}
 {% if user.is_authenticated %}
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <!-- Brand/logo -->
+  <a class="navbar-brand" href="static/music/images/music.jpeg">Music Web App</a>
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link 2</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link 3</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+    </li>
+  </ul>
+</nav>
    Welcome {{ user.username }}!!!
+
    <p><a href="{% url 'main' %}"> Main</a></p>
- <p><a href="{% url 'logout' %}"> logout</a></p>
+
 {% else %}
-<h2> Login please </h2>
-  <a href="{% url 'login' %}"> login </a>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <!-- Brand/logo -->
+  <a class="navbar-brand" href="static/music/images/music.jpeg">Music Web App</a>
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'login' %}">Login</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+    </li>
+    <!-- <li class="nav-item">
+      <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+    </li> -->
+  </ul>
+</nav>
+  <!-- <a href="{% url 'login' %}"> login </a>
 <h2> Don't have account then signup here </h2>
-  <a href="{% url 'signup' %}"> Sign up </a>
+  <a href="{% url 'signup' %}"> Sign up </a> -->
 {% endif%}
 {% endblock %}
