--- a/music/templates/main.html
+++ b/music/templates/main.html
@@ -5,7 +5,8 @@
 <h1 class="text-center">Welcome to the music world</h1>
 <p>Click onn language you want to listen </p>
 
-<a href="{%url 'english' %}">English</a>
+<a href="{% url 'english' %}">English</a>
+<a href="{% url 'telugu' %}">Telugu</a>
 {% else %}
 <h1>please Login</h1>
 <a href="{%url 'login' %}">Login</a>
