--- a/music/templates/base.html
+++ b/music/templates/base.html
@@ -16,7 +16,7 @@
     <ul class="navbar-nav">
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 2</a>
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link 3</a>
