--- a/music/templates/home.html
+++ b/music/templates/home.html
@@ -26,8 +26,9 @@
     </li>
   </ul>
 </nav>
-   Welcome {{ user.username }}!!!
-
+<div class="jumbotron">
+<h1>   Welcome {{ user.username }}!!! </h1>
+</div>
    <p><a href="{% url 'main' %}"> Main</a></p>
 
 {% else %}
@@ -44,13 +45,9 @@
     <li class="nav-item">
       <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
     </li>
-    <!-- <li class="nav-item">
-      <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-    </li> -->
+
   </ul>
 </nav>
-  <!-- <a href="{% url 'login' %}"> login </a>
-<h2> Don't have account then signup here </h2>
-  <a href="{% url 'signup' %}"> Sign up </a> -->
+
 {% endif%}
 {% endblock %}
