--- a/music/templates/telugu.html
+++ b/music/templates/telugu.html
@@ -1,9 +1,51 @@
-{% extends 'base.html' %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 {% load bootstrap4 %}
 {% block content%}
-{% if user.is_authenticated %}
-  {% for album in album_lists %}
-    <p>{{ album.tittle }}</p>
-  {% endfor %}
-{% endif%}
-{%endblock%}
+{% load staticfiles %}
+<title>Music App - Telugu</title>
+<link rel="stylesheet" type="text/css" href="{% static 'music/style.css'%}">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <!-- Brand/logo -->
+  <a class="navbar-brand" href="{% url 'main' %}">Music Web App</a>
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'main' %}">Main</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'home' %}">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+    </li>
+  </ul>
+</nav>
+{% if album_list %}
+  <h2>Albums are : </h2>
+  <ul>
+{% for album in album_list %}
+  {% if album.language == "telugu" %}
+    <div class="card" style="width:500px">
+      <div class="container">
+        <a href="/music/telugu/{{ album.id }}/">
+        <img class="card-img-top" src="/static/music/images/{{ album.albums_logo }}" alt="Card image" style="width:97%">
+        </a>
+        <div class="card-body">
+          <h4 class="card-title">Name of the Movie : {{ album.title}}</h4>
+          <a href="/music/telugu/{{ album.id }}/" class="btn btn-primary">{{ album.title }}</a>
+        </div>
+        </div>
+      </div>
+    <br>
+  {% endif %}
+{% endfor %}
+  </ul>
+  {% else %}
+    <h3>There are no songs in this </h3>
+    {% endif %}
+{% endblock %}
