--- a/music/templates/favorite.html
+++ b/music/templates/favorite.html
@@ -2,7 +2,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <link rel="icon" type="image/jpeg" href="/static/music/images/music.jpeg" sizes="350x500">
+<link rel="icon" type="image/jpeg" href="/static/music/images/music.jpeg" sizes="350x500">
 {% load bootstrap4 %}
 {% block content%}
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -23,23 +23,24 @@
     </li>
   </ul>
 </nav>
-<title>Music Web App - {{ album_list.title}}</title>
-<div class="card" style="width:1000px" align="center">
-    <img class="card-img-top" src="/static/music/images/{{ album_list.albums_logo }}" alt="Card image" style="width:100%">
+<title>Music Web App - Favorites</title>
+{% for item in favorite %}
+  <div class="card" style="width=50px">
+    <img class="card-img-top" src="/static/music/images/{{ item.song.album.albums_logo }}" alt="Card image" style="width:10%">
     <div class="card-body">
-      <div class="col-sm-4">
-      <h4 class="card-title">Name of the Movie : {{ album_list.title}}</h4>
-      <h4>Music Director : {{ album_list.artist }}</h4>
+      <h4 class="card-title">Name of the Movie : {{ item.song.album.title}}</h4>
+      <h4>Music Director : {{ item.song.album.artist }}</h4>
       <ul>
-          {% for item in album_list.song_set.all %}
-            <li>{{ item.song_title }} - {{ item.file_type }}</li>
+
+            <li>{{ item.song.song_title }} - {{ item.song.file_type }}</li>
 
             <audio controls>
-                   <source src="/static/music/songs/{{ item.location }}" type="audio/mp3">
+                   <source src="/static/music/songs/{{ item.song.location }}" type="audio/mp3">
                </audio>
-          {% endfor %}
+
       </ul>
     </div>
-    </div>
   </div>
+  <br>
+      {% endfor %}
 {% endblock %}
