--- a/music/templates/main.html
+++ b/music/templates/main.html
@@ -22,6 +22,25 @@
         <a href="{% url 'telugu' %}">Telugu</a>
       </div>
     </div>
+    <br>
+      <div class="card" style="width:200px">
+        <a href="{% url 'malayalam' %}">
+          <img class="card-img-top" src="/static/music/images/malayalam.jpeg" alt="Card image" style="width:100%">
+          <div class="card-body">
+            </a>
+            <a href="{% url 'malayalam' %}">Malayalam</a>
+          </div>
+        </div>
+     <br>
+        <div class="card" style="width:200px">
+          <a href="{% url 'favorite' %}">
+            <img class="card-img-top" src="/static/music/images/favorite.jpeg" alt="Card image" style="width:100%">
+            <div class="card-body">
+              </a>
+              <a href="{% url 'favorite' %}">Favorite Songs</a>
+            </div>
+          </div>
+
 {% else %}
 <h1>please Login</h1>
 <a href="{%url 'login' %}">Login</a>
