--- a/music/templates/telugu.html
+++ b/music/templates/telugu.html
@@ -2,6 +2,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <link rel="icon" type="image/jpeg" href="/static/music/images/music.jpeg" sizes="350x500">
 {% load bootstrap4 %}
 {% block content%}
 {% load staticfiles %}
