--- a/music/templates/telugu.html
+++ b/music/templates/telugu.html
@@ -31,7 +31,7 @@
   <ul>
 {% for album in album_list %}
   {% if album.language == "telugu" %}
-    <div class="col-xl-2">
+    <div class="col-xl-2" class="items">
     <div class="card" style="width:500px">
 
       <div class="container">
