--- a/music/templates/home.html
+++ b/music/templates/home.html
@@ -22,16 +22,23 @@
     <li class="nav-item">
       <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+    </li>
   </ul>
 </nav>
 <div class="jumbotron">
   {{ user.username }}
 </div>
-<h1>hi</h1>
-  <h1>{{ user_info.lang }}</h1>
-   <p><a href="{% url 'telugu' %}">{{ user_info.lang }}</a></p>
-   <img src="/static/music/images/{{ user_info.user_picture }}" style="width:10%">
 
+
+   <div class="card" style="width:400px">
+     <img class="card-img-top" src="/static/music/images/{{ user_info.user_picture }}" alt="Card image">
+     <div class="card-body">
+       <h4 class="card-title">{{ user.username }}</h4>
+       <p class="card-text">{{ user_info.lang }}</p>
+     </div>
+   </div>
 
 {% else %}
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
