--- a/music/templates/addnewalbum.html
+++ b/music/templates/addnewalbum.html
@@ -3,9 +3,23 @@
 {% block content %}
 
 <h1>Add new Albums</h1>
+
+
+
+<div class="col-xl-2" class="items">
+<div class="card-top" style="width:160em">
+
+  <div class="container">
     <form method="POST" class="post-form">
         {% csrf_token %}
         {{ form.as_p }}
         {% bootstrap_button "Save" button_type="submit" button_class="btn-primary" %}
     </form>
+
+    </div>
+    </div>
+    </div>
+  </div>
+
+
 {% endblock %}
