--- a/music/templates/base.html
+++ b/music/templates/base.html
@@ -9,6 +9,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <title>Music App</title>
+  {% if user.is_authenticated %}
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="#">Music Web App</a>
@@ -27,6 +28,23 @@
 
 </head>
 <body>
+      {% else %}
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <!-- Brand/logo -->
+    <a class="navbar-brand" href="#">Music Web App</a>
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
+      </li>
+{#      <li class="nav-item">#}
+{#        <a class="nav-link" href="{% url 'logout' %}">Log Out</a>#}
+{#      </li>#}
+    </ul>
+  </nav>
+{% endif %}
 
 
   <main>
