--- a/music/templates/english.html
+++ b/music/templates/english.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'music/style.css'%}">
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <!-- Brand/logo -->
-  <a class="navbar-brand" href="{% url 'main' %}">Music Web App</a>
+  <a class="navbar-brand" href="{% url 'main' %}">Music Web Application</a>
 
   <!-- Links -->
   <ul class="navbar-nav">
@@ -22,7 +22,7 @@
       <a class="nav-link" href="{% url 'home' %}">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+      <a class="nav-link" href="{% url 'logout' %}">Log-Out</a>
     </li>
     
 
